tests/errors/pat_resolved_as_fun_err/pat_resolved_as_fun_err.c
#error pat_resolved_as_fun_err:9:8 Couldn't resolve nav pattern.
